--- a/index.html
+++ b/index.html
@@ -11,7 +11,28 @@
 <body> 
     <header class="cabecalho">
     <div class="container">
+        <input type="checkbox" id="menu" class="container__botao">
+        <label for="menu">
         <span class="cabecalho_menu-hamburguer" container__imagem></span>
+        </label>
+        <ul>
+            <li class="lista__menu-titulo">categorias</li>
+            <li class="lista__menu">
+                <a href="#" class="lista-menu__link">progamação</a>
+            </li>
+            <li class="lista__menu">
+                <a href="#" class="lista-menu__link">front-end</a>
+            </li>
+            <li class="lista__menu">
+                <a href="#" class="lista-menu__link">infraestutura</a>
+            </li>
+            <li class="lista__menu">
+                <a href="#" class="lista-menu__link">bunisess</a>
+            </li>
+            <li class="lista__menu">
+                <a href="#" class="lista-menu__link">desing e ux</a>
+            </li>
+        </ul>
         <img class="container__imagem" src="img/logo.svg" alt="">
     </div>
     <div class="container">
