--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <a href="#"><img class="container__imagem" src="img/Favoritos.svg" alt=""></a>
             <a href="#"><img class="container__imagem" src="img/Compras.svg" alt=""></a>
             <a href="#"><img class="container__imagem" src="img/Usuario.svg" alt=""></a>
+            <a href="#"><img class="container__imagem" src="img/Polygon.svg" alt=""></a>
         </div>
     </header>
 </body>
