--- a/index.html
+++ b/index.html
@@ -44,5 +44,10 @@
             <a href="#"><img class="container__imagem" src="img/Usuario.svg" alt=""></a>
         </div>
     </header>
+    <section class="baner">
+    <h2 class="baner_titulo"> já sabe por onde começar?</h2>
+    <p class="baner_texto">encontre em nossa estante o que precisa para seu desenvolvimento!</p>
+    <input type="search" class="baner_pesquisa" placeholder="qual sera sua ultima leitura?">
+    <section>
 </body>
 </html>
