--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -36,7 +36,7 @@
                     <a href="#" class="lista-menu__link">Design & UX</a>
                 </li>
             </ul>
-            <img class="container__imagem" src="img/Logo.svg" alt="Logo Alura">
+            <img class="container__imagem" src="img/logo.svg" alt="Logo Alura">
         </div>
         <div class="container">
             <a href="#"><img class="container__imagem" src="img/Favoritos.svg" alt=""></a>
@@ -44,10 +44,10 @@
             <a href="#"><img class="container__imagem" src="img/Usuario.svg" alt=""></a>
         </div>
     </header>
-    <section class="baner">
-    <h2 class="baner_titulo"> já sabe por onde começar?</h2>
-    <p class="baner_texto">encontre em nossa estante o que precisa para seu desenvolvimento!</p>
-    <input type="search" class="baner_pesquisa" placeholder="qual sera sua ultima leitura?">
-    <section>
+    <section class="banner">
+            <h2 class="banner__titulo">Já sabe por onde começar?</h2>
+            <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
+            <input type="search" class="banner__pesquisa" placeholder="Qual sera sua proxima leitura?">
+    </section>
 </body>
 </html>
